# mudpy

./: README.md  client.py  datacontainer.py  descriptors.py  game_objects.py  pyproject.toml  registry.py  server.py  test.py
descriptors/: __init__.py  registry.py  state.py
engine/: __init__.py  utils.py
engine/bases/: __init__.py  game_object.py  human.py  player.py
engine/descriptors/: __init__.py  proxies.py  registry.py  state.py
engine/mechanics/: __init__.py  dice.py
engine/mixins/: mappings.py
game/: __init__.py  server.py
game/mechanics/: dice.py  flags.py
game/objects/: __init__.py  armor.py  base.py  consumable.py  living.py  mixins.py  simple.py  weapon.py
game/system/: database.py  utils.py
objects/: __init__.py  dice.py  flags.py  game_object.py  utils.py
objects/bases/: __init__.py  game_object.py  items.py
objects/descriptors/: __init__.py  proxies.py  registry.py  state.py
objects/game_object/: __init__.py  armor.py  base.py  consumable.py  living.py  weapon.py
objects/mechanics/: __init__.py  dice.py
